Added section toggle options to admin home page form

--- a/src/app/components/admin/admin-core/admin-ads/admin-ads.component.html
+++ b/src/app/components/admin/admin-core/admin-ads/admin-ads.component.html
@@ -1,6 +1,6 @@
 <div class="row mb-5 mt-3">
     <div class="col-md-6 mx-auto">
-        <div class="card">
+        <div class="card admin-badge-card">
             <div class="card-body">
                 <h1 class="text-center text-secondary pb-4 pt-3">
                     <span class="text-dark">
