--- a/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
+++ b/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
@@ -1,8 +1,8 @@
 <div class="row mb-5 mt-3">
     <div class="col-md-6 mx-auto">
-        <div class="card">
+        <div class="card admin-badge-card">
             <div class="card-body">
-                <h1 class="text-center text-secondary pb-4 pt-3">
+                <h1 class="text-center text-secondary pb-4 pt-3 admin-badge">
                     <span class="text-dark">
                <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                     alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
