--- a/src/app/components/core/navbar/navbar.component.html
+++ b/src/app/components/core/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<!-- * NAVBAR * -->
 <!--BEGIN MOBILE MENU-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top d-md-block d-lg-none d-xl-none">
     <div class="container">
@@ -102,7 +103,7 @@
 <!--END MOBILE MENU-->
 
 
-<div class="fixed-top d-none d-sm-none d-md-none d-lg-block d-xl-block" id="TopHeader">
+<div class="fixed-top d-none d-sm-none d-md-none d-lg-block d-xl-block" id="HomeNavBar">
     <div class="container">
         <div class="col-md-12">
             <div id="header">
