Improved on the hide section feature on the admin-hompage form

--- a/src/app/components/admin/admin-home-page/admin-home-page.component.css
+++ b/src/app/components/admin/admin-home-page/admin-home-page.component.css
@@ -17,3 +17,11 @@ p {
     font-size: 14px;
     font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
 }
+
+.hide-btn {
+    float: right;
+}
+
+p.spacer {
+    padding: 1em;
+}
