--- a/src/app/components/admin/admin-home-page/admin-home-page.component.html
+++ b/src/app/components/admin/admin-home-page/admin-home-page.component.html
@@ -97,23 +97,28 @@
                                 <div class="col-sm-12">
                                     <hr>
                                     <h5>Cards Title &amp; Subtitle</h5>
-                                    <div class="form-group">
+                                    <div class="form-group hide-btn">
                                         <div class="custom-control custom-checkbox">
                                             <input type="checkbox"
                                                    class="custom-control-input"
                                                    id="cardsHidden"
                                                    formControlName="cardsHidden"
                                                    (click)="toggleCardsHidden()">
-                                            <label class="custom-control-label"
-                                                   for="cardsHidden">Hide Cards Section?</label>
+                                            <label class="custom-control-label btn btn-default"
+                                                   for="cardsHidden">
+                                                <i class="fa fa-eye-slash"></i>&nbsp;Hide Cards Section?
+                                            </label>
                                         </div>
                                     </div>
-                                    <div class="card snackbar-warning" *ngIf="homePage.cardsHidden">
-                                        <div class="card-body">
-                                            <h6 class="text-center">
-                                                <i class="fa fa-exclamation-triangle"></i>
-                                                Cards Section Disabled
-                                            </h6>
+                                    <p class="spacer" *ngIf="homePage.cardsHidden">&nbsp;</p>
+                                    <div class="form-group">
+                                        <div class="card snackbar-warning" *ngIf="homePage.cardsHidden">
+                                            <div class="card-body">
+                                                <h6 class="text-center">
+                                                    <i class="fa fa-exclamation-triangle"></i>
+                                                    Cards Section Disabled
+                                                </h6>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="form-group" *ngIf="!homePage.cardsHidden">
@@ -143,17 +148,20 @@
                                 <div class="col-sm-12">
                                     <hr>
                                     <h5>Video Title &amp; Subtitle</h5>
-                                    <div class="form-group">
+                                    <div class="form-group hide-btn">
                                         <div class="custom-control custom-checkbox">
                                             <input type="checkbox"
                                                    class="custom-control-input"
                                                    id="videoHidden"
                                                    formControlName="videoHidden"
                                                    (click)="toggleVideoHidden()">
-                                            <label class="custom-control-label"
-                                                   for="videoHidden">Hide Video Section?</label>
+                                            <label class="custom-control-label btn btn-default"
+                                                   for="videoHidden">
+                                                <i class="fa fa-eye-slash"></i>&nbsp;Hide Video Section?
+                                            </label>
                                         </div>
                                     </div>
+                                    <p class="spacer" *ngIf="homePage.videoHidden">&nbsp;</p>
                                     <div class="card snackbar-warning" *ngIf="homePage.videoHidden">
                                         <div class="card-body">
                                             <h6 class="text-center">
@@ -191,17 +199,20 @@
                                 <div class="col-sm-12">
                                     <hr>
                                     <h5>Posts Title, Subtitle &amp; Button</h5>
-                                    <div class="form-group">
+                                    <div class="form-group hide-btn">
                                         <div class="custom-control custom-checkbox">
                                             <input type="checkbox"
                                                    class="custom-control-input"
                                                    id="postsHidden"
                                                    formControlName="postsHidden"
                                                    (click)="togglePostsHidden()">
-                                            <label class="custom-control-label"
-                                                   for="postsHidden">Hide Posts Section?</label>
+                                            <label class="custom-control-label btn btn-default"
+                                                   for="postsHidden">
+                                                <i class="fa fa-eye-slash"></i>&nbsp;Hide Posts Section?
+                                            </label>
                                         </div>
                                     </div>
+                                    <p class="spacer" *ngIf="homePage.postsHidden">&nbsp;</p>
                                     <div class="card snackbar-warning" *ngIf="homePage.postsHidden">
                                         <div class="card-body">
                                             <h6 class="text-center">
@@ -259,17 +270,20 @@
                                 <div class="col-sm-12">
                                     <hr>
                                     <h5>On Demand Title, Text &amp; Button</h5>
-                                    <div class="form-group">
+                                    <div class="form-group hide-btn">
                                         <div class="custom-control custom-checkbox">
                                             <input type="checkbox"
                                                    class="custom-control-input"
                                                    id="onDemandHidden"
                                                    formControlName="onDemandHidden"
                                                    (click)="toggleOnDemandHidden()">
-                                            <label class="custom-control-label"
-                                                   for="onDemandHidden">Hide On Demand Section?</label>
+                                            <label class="custom-control-label btn btn-default"
+                                                   for="onDemandHidden">
+                                                <i class="fa fa-eye-slash"></i>&nbsp;Hide On Demand Section?
+                                            </label>
                                         </div>
                                     </div>
+                                    <p class="spacer" *ngIf="homePage.onDemandHidden">&nbsp;</p>
                                     <div class="card snackbar-warning" *ngIf="homePage.onDemandHidden">
                                         <div class="card-body">
                                             <h6 class="text-center">
@@ -325,17 +339,20 @@
                                 <div class="col-sm-12">
                                     <hr>
                                     <h5>Numbers Title and Three Sections</h5>
-                                    <div class="form-group">
+                                    <div class="form-group hide-btn">
                                         <div class="custom-control custom-checkbox">
                                             <input type="checkbox"
                                                    class="custom-control-input"
                                                    id="byTheNumbersHidden"
                                                    formControlName="byTheNumbersHidden"
                                                    (click)="toggleByTheNumbersHidden()">
-                                            <label class="custom-control-label"
-                                                   for="byTheNumbersHidden">Hide By The Numbers Section?</label>
+                                            <label class="custom-control-label btn btn-default"
+                                                   for="byTheNumbersHidden">
+                                                <i class="fa fa-eye-slash"></i>&nbsp;Hide By The Numbers Section?
+                                            </label>
                                         </div>
                                     </div>
+                                    <p class="spacer" *ngIf="homePage.byTheNumbersHidden">&nbsp;</p>
                                     <div class="card snackbar-warning" *ngIf="homePage.byTheNumbersHidden">
                                         <div class="card-body">
                                             <h6 class="text-center">
@@ -419,17 +436,20 @@
                                     <p>
                                         <small>Use the Image Uploader below to get new Image URL</small>
                                     </p>
-                                    <div class="form-group">
+                                    <div class="form-group hide-btn">
                                         <div class="custom-control custom-checkbox">
                                             <input type="checkbox"
                                                    class="custom-control-input"
                                                    id="sponsorHidden"
                                                    formControlName="sponsorHidden"
                                                    (click)="toggleSponsorHidden()">
-                                            <label class="custom-control-label"
-                                                   for="sponsorHidden">Hide Sponsors Section?</label>
+                                            <label class="custom-control-label btn btn-default"
+                                                   for="sponsorHidden">
+                                                <i class="fa fa-eye-slash"></i>&nbsp;Hide Sponsors Section?
+                                            </label>
                                         </div>
                                     </div>
+                                    <p class="spacer" *ngIf="homePage.sponsorHidden">&nbsp;</p>
                                     <div class="card snackbar-warning" *ngIf="homePage.sponsorHidden">
                                         <div class="card-body">
                                             <h6 class="text-center">
